clusters/hybrid01/config/synapse/synapse-mtls.yaml
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: "strict-mtls"
  namespace: synapse
spec:
  mtls:
    mode: STRICT
