clusters/hybrid01/config/synapse/synapse-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: synapse
  labels:
    pod-security.kubernetes.io/enforce: privileged
    goldilocks.fairwinds.com/enabled: "true"
