clusters/hybrid01/config/synapse/synapse-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synapse
  namespace: synapse
  annotations:
      configmap.reloader.stakater.com/reload: "synapse"
  labels:
    app: synapse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: synapse
  template:
    metadata:
      labels:
        app: synapse
    spec:
      hostUsers: false
      containers:
      - name: synapse
        image: matrixdotorg/synapse:v1.161.0
        ports:
        - name: synapse
          protocol: TCP
          containerPort: 8008
        resources:
          requests:
            cpu: 20m
            memory: 350M
          limits:
            memory: 750M
        command:
          - /usr/local/bin/python
          - -m
          - synapse.app.homeserver
          - --config-path=/data/homeserver.yaml
          - --config-path=/tmp/db.yaml
        volumeMounts:
          - name: synapse-cm
            mountPath: /data
          - name: synapse-data
            mountPath: /storage/media_store
          - name: synapse-keys
            mountPath: /keys
          - name: synapse-tmp
            mountPath: /tmp
      volumes:
        - name: synapse-cm
          configMap:
            name: synapse
        - name: synapse-data
          persistentVolumeClaim:
            claimName: synapse-media
        - name: synapse-tmp
          emptyDir: {}
        - name: synapse-keys
          persistentVolumeClaim:
            claimName: synapse-keys
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matrix-authentication-service
  namespace: synapse
  labels:
    app: matrix-authentication-service
  annotations:
      configmap.reloader.stakater.com/reload: "mas"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matrix-authentication-service
  template:
    metadata:
      labels:
        app: matrix-authentication-service
    spec:
      hostUsers: false
      containers:
      - name: mas
        image: ghcr.io/element-hq/matrix-authentication-service:1.26.0
        ports:
        - name: mas
          protocol: TCP
          containerPort: 8080
        resources:
          requests:
            cpu: 10m
            memory: 100M
          limits: 
            memory: 250M
        args:
          - --config=/data/config.yaml
          - --config=/tmp/db.yaml
        volumeMounts:
          - name: mas-cm
            mountPath: /data
          - name: mas-tmp
            mountPath: /tmp
      volumes:
        - name: mas-cm
          configMap:
            name: mas
        - name: mas-tmp
          emptyDir: {}
