clusters/hybrid01/config/synapse/mas-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mas
  namespace: synapse
  labels:
    app: matrix-authentication-service
spec:
  type: ClusterIP
  selector:
    app: matrix-authentication-service
  ports:
    - name: mas
      protocol: TCP
      port: 8080
      targetPort: mas
