clusters/hybrid01/config/synapse/synapse-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: synapse
  namespace: synapse
  labels:
    app: synapse
spec:
  type: ClusterIP
  selector:
    app: synapse
  ports:
    - name: synapse
      protocol: TCP
      port: 8008
      targetPort: synapse
