clusters/hybrid01/config/synapse/well-known-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: well-known
  namespace: synapse
  labels:
    app: well-known
spec:
  type: ClusterIP
  selector:
    app: well-known
  ports:
    - name: well-known
      protocol: TCP
      port: 80
      targetPort: well-known
