clusters/hybrid01/config/synapse/synapse-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: synapse-external
  namespace: synapse
spec:
  hosts:
  - "justmeowing.net"
  gateways:
  - istio-external-gateway/external-gateway
  http:
  - match:
    - uri:
        prefix: "/_matrix/client/v3/login"
    - uri:
        prefix: "/_matrix/client/v3/logout"
    - uri:
        prefix: "/_matrix/client/v3/refresh"
    route:
    - destination:
        host: mas
        port:
          number: 8080
  - match:
    - uri:
        prefix: "/_matrix"
    - uri:
        prefix: "/_synapse"
    route:
    - destination:
        host: synapse
        port:
          number: 8008
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: synapse-internal
  namespace: synapse
spec:
  hosts:
  - "justmeowing.net"
  gateways:
  - istio-internal-gateway/internal-gateway
  http:
  - match:
    - uri:
        prefix: "/_matrix/client/v3/login"
    - uri:
        prefix: "/_matrix/client/v3/logout"
    - uri:
        prefix: "/_matrix/client/v3/refresh"
    route:
    - destination:
        host: mas
        port:
          number: 8080
  - match:
    - uri:
        prefix: "/_matrix"
    - uri:
        prefix: "/_synapse"
    route:
    - destination:
        host: synapse
        port:
          number: 8008
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: synapse-federation-external
  namespace: synapse
spec:
  hosts:
  - "matrix.justmeowing.net"
  gateways:
  - istio-external-gateway/external-gateway
  http:
    - route:
      - destination:
          host: synapse
          port:
            number: 8008
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: synapse-federation-internal
  namespace: synapse
spec:
  hosts:
  - "matrix.justmeowing.net"
  gateways:
  - istio-internal-gateway/internal-gateway
  http:
    - route:
      - destination:
          host: synapse
          port:
            number: 8008
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mas-external
  namespace: synapse
spec:
  hosts:
  - "matrixauth.justmeowing.net"
  gateways:
  - istio-external-gateway/external-gateway
  http:
    - route:
      - destination:
          host: mas
          port:
            number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mas-internal
  namespace: synapse
spec:
  hosts:
  - "matrixauth.justmeowing.net"
  gateways:
  - istio-internal-gateway/internal-gateway
  http:
    - route:
      - destination:
          host: mas
          port:
            number: 8080
