clusters/hybrid01/config/synapse/well-known-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: synapse-well-known-external
  namespace: synapse
spec:
  hosts:
  - "justmeowing.net"
  gateways:
  - istio-external-gateway/external-gateway
  http:
  - match:
    - uri:
        prefix: "/.well-known/matrix/"
    route:
    - destination:
        host: well-known
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: synapse-well-known
  namespace: synapse
spec:
  hosts:
  - "justmeowing.net"
  gateways:
  - istio-internal-gateway/internal-gateway
  http:
  - match:
    - uri:
        prefix: "/.well-known/matrix/"
    route:
    - destination:
        host: well-known
        port:
          number: 80
